; Rather than having two separate stanzas like this, should probably refactor into a /lib and /bin directory
(library
 (name conceptual)
 (libraries printbox printbox-text menhirLib menhirCST zarith)
)

; Below is for building lexer with -ml flag. 
(rule
 (target lexer.ml)
 (deps   lexer.mll)
 (action (chdir %{workspace_root}
          (run %{bin:ocamllex} -q -ml -o %{target} %{deps}))))
          ; add the desired flags here

; Or simply use if the bytecode compiler is used. This uses the automata-intepreter.
; (ocamllex lexer)

(menhir
 (flags --dump )
 (infer true) ; this flag and explain are enabled by default (in this version of dune/menhir) but explicitly included for clarity
 (explain true)
 (modules parser)
)

(env
 (dev
  (flags
   (:standard -warn-error -A))))
